--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -48,12 +48,28 @@ li {
     justify-content: space-between;
 }
 
+.cart {
+    transition: .1s ease-in-out;
+    -webkit-transition: .1s ease-in-out;
+    -moz-transition: .1s ease-in-out;
+    -ms-transition: .1s ease-in-out;
+    -o-transition: .1s ease-in-out;
+}
+
+.cart:hover {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+}
+
 .header .header-container .header-top .header-left .add-text {
     font-size: 1.2rem;
     font-weight: 300;
-    letter-spacing: .024rem;
-    color: var(--white);
-    opacity: .5;
+    letter-spacing: 0.024rem;
+    color: #fff;
+    opacity: 0.5;
     flex-basis: 19rem;
 }
 
@@ -67,8 +83,8 @@ li {
 
 .header .header-container .header-top .header-right .cart a {
     position: relative;
-    background-color: rgba(255, 255, 255, .05);
-    padding: .8rem;
+    background-color: rgba(255, 255, 255, 0.05);
+    padding: 0.8rem;
     border-radius: 100%;
     display: flex;
     align-items: center;
@@ -76,14 +92,14 @@ li {
 }
 
 .header .header-container .header-top .header-right .cart a::after {
-    content: '3';
+    content: "3";
     position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: var(--white);
-    top: -.2rem;
-    right: -.2rem;
+    color: #fff;
+    top: -0.2rem;
+    right: -0.2rem;
     width: 1.6rem;
     height: 1.6rem;
     background-color: var(--beige);
@@ -94,21 +110,21 @@ li {
     position: relative;
     font-size: 1.2rem;
     font-weight: 600;
-    letter-spacing: .024rem;
+    letter-spacing: 0.024rem;
 
     a {
-        color: var(--white);
+        color: #fff;
     }
 }
 
 .header .header-container .header-top .header-right .log-in a::after {
-    content: '';
+    content: "";
     position: absolute;
     top: 0;
     left: -50%;
     width: 1.6rem;
     height: 1.6rem;
-    background-image: url(/src/img/User.png);
+    background-image: url(/img/logoes/User.png);
 }
 
 .header .header-container .header-top .header-right .phone-number {
@@ -124,80 +140,36 @@ li {
         position: relative;
         font-size: 2rem;
         font-weight: 600;
-        letter-spacing: .04rem;
+        letter-spacing: 0.04rem;
     }
 
     a {
-        color: var(--white);
-        opacity: .5;
+        color: #fff;
+        opacity: 0.5;
     }
 }
 
 .header .header-container .header-top .header-right .phone-number span::before {
-    content: '';
+    content: "";
     position: absolute;
     top: 0;
     left: -20%;
     width: 2.4rem;
     height: 2.4rem;
-    background-image: url(/src/img/phone.png);
+    background-image: url("/img/logoes/PhoneCall.png");
 }
 
 .header .header-container .header-top .header-right .edit-lang {
     font-size: 1.2rem;
     font-weight: 500;
-    letter-spacing: .024rem;
+    letter-spacing: 0.024rem;
 
     a {
-        color: rgba(255,255,255,0.25);
+        color: rgba(255, 255, 255, 0.25);
     }
 
     span a {
-        color: var(--white);
-    }
-}
-
-.header .header-container .header-row {
-    position: sticky;
-    box-sizing: border-box;
-    width: 100%;
-    padding: 3.1rem 12rem 3rem 12rem;
-    background-color: var(--black);
-    opacity: .95;
-}
-
-.header .header-container .header-row .nav-list {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    li a {
-        color: var(--white);
-        font-size: 1.4rem;
-        font-weight: 400;
-        letter-spacing: .098rem;
-        transition: .4s ease;
-        display: block;
-    }
-
-    li a:hover {
-        transform: translateY(-.2rem);
-        color: var(--gold);
-    }
-
-    li .deployable {
-        position: relative;
-    }
-
-    li .deployable::after {
-        content: '';
-        position: absolute;
-        top: 40%;
-        right: -30%;
-        width: 1.2rem;
-        height: .6rem;
-        background-image: url(/src/img/deployable.png);
-        background-size: 100%;
+        color: #fff;
     }
 }
 
@@ -219,10 +191,9 @@ li {
     display: inline-block;
     height: 0.3rem;
     width: 6rem;
+
+    background-color: #fff;
     margin-bottom: 1.3rem;
-
-    background-color: var(--white);
-
     border-radius: 3rem;
     -webkit-border-radius: 3rem;
     -moz-border-radius: 3rem;
@@ -232,17 +203,67 @@ li {
 
 .burger-line-short {
     display: inline-block;
+
     width: 4rem;
     height: 0.3rem;
 
-    background-color: var(--white);
-
+    background-color: #fff;
     border-radius: 3rem;
     -webkit-border-radius: 3rem;
     -moz-border-radius: 3rem;
     -ms-border-radius: 3rem;
     -o-border-radius: 3rem;
 }
+
+.header .header-container .header-row {
+    position: sticky;
+    box-sizing: border-box;
+
+    width: 100%;
+    padding: 3.1rem 12rem 3rem 12rem;
+
+    background-color: var(--black);
+    opacity: 0.95;
+}
+
+.header .header-container .header-row .nav-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    li a {
+        display: block;
+
+        color: #fff;
+        font-size: 1.4rem;
+        font-weight: 400;
+        letter-spacing: 0.098rem;
+        transition: 0.4s ease;
+    }
+
+    li a:hover {
+        transform: translateY(-0.2rem);
+        color: var(--gold);
+    }
+
+    li .deployable {
+        position: relative;
+    }
+
+    li .deployable::after {
+        content: "";
+        position: absolute;
+        top: 40%;
+        right: -30%;
+
+        width: 1.2rem;
+        height: 0.6rem;
+
+        background-image: url("/img/deployable.png");
+        background-size: 100%;
+    }
+}
+
 
 .main {
     margin-top: 6rem;
@@ -860,8 +881,6 @@ li {
 
 
 
-
-
 @media (max-width: 698px) {
     .header .header-container .header-top .header-right {
         display: none;
@@ -869,7 +888,6 @@ li {
 
     .header-top {
         height: 12rem;
-        width: 100vw;
     }
 
     .add-text {
@@ -884,6 +902,10 @@ li {
         display: block;
     }
 
+    .header-top {
+        width: 100vw;
+    }
+
     .logo {
         margin-left: -9rem;
     }
@@ -895,7 +917,60 @@ li {
     .hamburger {
         margin-left: 10rem;
     }
+}
 
+@media (max-width: 360px) {
+    .header .headercontainer .headertop {
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+
+    .logo img {
+        width: 86px;
+        height: 46px;
+
+    }
+
+    .sponsors-logo img {
+        width: 37px;
+        height: 34px;
+        margin-left: .5rem;
+    }
+
+    .hamburger {
+        margin-left: -3.5rem;
+
+    }
+
+
+    .header .headercontainer .headertop .header-right {
+        margin-right: 1rem;
+        display: grid;
+        grid-template-columns: repeat(3, 2.5rem);
+    }
+
+    .header .headercontainer .headertop .headercenter {
+        display: none;
+    }
+
+    .header .headercontainer .headertop .headerbasket {
+        display: none;
+    }
+
+    .header .headercontainer .headertop .headersign-in {
+        display: none;
+    }
+
+    .header .headercontainer .headertop .headerphone {
+        display: none;
+    }
+
+    .header .headercontainer .headertop .headerlast {
+        display: none;
+    }
+}
+
+@media (max-width: 698px) {
     .main .container {
         padding: 0 3rem;
     }
@@ -918,7 +993,7 @@ li {
 
     .fourth {
         margin-left: 18rem;
-        
+
         font-size: 1.4rem;
         font-weight: 700;
         letter-spacing: 8%;
@@ -963,56 +1038,25 @@ li {
         left: 55rem;
     }
 }
+
 @media(max-width: 360px) {
-    .header .header-container .header-top .header-right {
-        display: none;
-    }
 
-    .header-top {
-        height: 12rem;
-    }
-    .none2{
-        display: none;
-    }
-    .add-text {
-        display: none;
-    }
-
-    .header .header-container .header-row {
-        display: none;
-    }
-    .none{
-        display: block;
-    }
-    .header .header-container .header-top .header-left{
-        display: flex;
-        align-items: center;
-    }
-    .header .header-container .header-top .header-left .logo a img{
-        width: 8.6rem;
-        height: 4.6rem;
-    }
-    .header .header-container .header-top .header-left .sponsors-logo a img{
-        width: 3.7rem;
-        height: 3.4rem;
-        margin-left: 1rem;
-    }
-    .hamburger{
-        margin-left: -3rem;
-    }
-    .main .main-title{
+    .main .main-title {
         max-width: 30rem;
         font-size: 2.6rem;
     }
-    .filters{
-        max-width:300px;
+
+    .filters {
+        max-width: 300px;
         display: flex;
         flex-direction: column-reverse;
     }
-    .main .filters .third span{
+
+    .main .filters .third span {
         font-size: 1rem;
     }
-    .main .filters .third{
+
+    .main .filters .third {
         width: 100%;
         margin-top: 2rem;
         display: flex;
@@ -1021,293 +1065,50 @@ li {
 
         font-size: 1.4rem;
     }
-    .mobile-line{
+
+    .mobile-line {
         width: 31rem;
         height: 1px;
         margin-top: 1rem;
         background-color: #0000001A;
     }
-    .main .filters .fourth{
+
+    .main .filters .fourth {
         margin-left: 0;
         display: flex;
     }
-    .main .filters .fourth:after{
+
+    .main .filters .fourth:after {
         margin-left: 18rem;
     }
-    .main .catalog .cards .card{
+
+    .main .catalog .cards .card {
         width: 30rem;
         height: 47.5rem;
 
         margin-top: 3rem;
         margin-left: 0rem;
     }
-    .main .catalog .cards .card img{
+
+    .main .catalog .cards .card img {
         width: 30rem;
     }
-    .recent .container .title{
+
+    .recent .container .title {
         font-size: 2rem;
         padding-top: 6rem;
     }
-    .recent .container .recent-card .card:nth-child(2){
+
+    .recent .container .recent-card .card:nth-child(2) {
         display: none;
     }
-    .recent .container .recent-card .arrow-left{
+
+    .recent .container .recent-card .arrow-left {
         left: 0rem;
     }
-    .recent .container .recent-card .arrow-right{
+
+    .recent .container .recent-card .arrow-right {
         left: 26rem;
     }
 }
 
-.footer {
-    margin-top: 7.1rem;
-    background-color: var(--black);
-
-    .line {
-        width: 100%;
-        height: 2px;
-        margin-top: 6.05rem;
-        margin-bottom: 4.55rem;
-        background-color: rgba(255, 255, 255, .15);
-    }
-
-    .footer-container {
-        padding: 0 var(--container-padding);
-    }
-
-    .footer-top .footer-container {
-        display: flex;
-        box-sizing: border-box;
-        justify-content: space-between;
-        height: 275.5px;
-        padding-top: 5.4rem;
-
-        ul {
-            display: flex;
-            flex-direction: column;
-            
-
-            h2 {
-                font-size: 1.6rem;
-                font-weight: 600;
-                letter-spacing: .032rem;
-                color: #fff;
-                margin-bottom: 2.5rem;
-            }
-
-            li {
-                position: relative;
-                margin-bottom: 1rem;
-                font-size: 1.4rem;
-                font-weight: 400;
-                letter-spacing: .028rem;
-
-                a {
-                    color: #fff;
-                    opacity: .5;
-                    transition: .6s ease;
-                }
-            }
-
-            li::before {
-                content: '>';
-                position: absolute;
-                color: #fff;
-                top: 0;
-                left: -10%;
-                width: 10px;
-                height: 100%;
-                opacity: 0;
-                transition: .6s ease;
-            }
-
-            li:hover::before {
-                opacity: 1;
-                left: -7.5%;
-            }
-
-            li a:active {
-                color: var(--gold);
-            }
-
-            li:active::before {
-                color: var(--gold);
-            }
-        }
-
-        .footer-last {
-            width: 460px;
-            display: flex;
-            flex-direction: column;
-
-            h2 {
-                font-size: 1.6rem;
-                font-weight: 600;
-                letter-spacing: .032rem;
-                color: #fff;
-                margin-bottom: 2rem;
-            }
-
-            .send-email {
-                position: relative;
-                display: flex;
-                align-items: center;
-                height: 55px;
-                width: 460px;
-                margin-bottom: 9.4rem;
-
-                input {
-                    box-sizing: border-box;
-                    position: absolute;
-                    left: 0;
-                    width: 460px;
-                    height: 55px;
-                    padding-left: 4rem;
-                    border-radius: 10rem;
-                    background-color: rgba(255, 255, 255, .05);
-                    color: white;
-                    border: none;
-                    transition: .6s ease;
-                }
-
-                input:focus {
-                    outline: none;
-                }
-
-                .btn--mail {
-                    position: absolute;
-                    right: 0;
-                    padding: 1.7rem 3rem;
-                    border-radius: 10rem;
-                    background-color: var(--gold);
-                    border: none;
-                    cursor: pointer;
-                    transition: .6s ease;
-                }
-
-                .btn--mail:hover {
-                    background-color: #BFA470;
-                }
-
-                .btn--mail:active {
-                    box-shadow: 4px 6px 6px 4px rgba(0, 0, 0, 0.25) inset;
-                    transform: scale(.9);
-                }
-            }
-
-            .footer-phone {
-                position: relative;
-                font-size: 2rem;
-                font-weight: 600;
-                letter-spacing: .04rem;
-                color: #fff;
-                align-self: end;
-            }
-
-            .footer-phone::before {
-                content: '';
-                position: absolute;
-                top: 0;
-                left: -20%;
-                width: 2.4rem;
-                height: 2.4rem;
-                background-image: url('img/phone.png');
-            }
-        }
-    }
-
-    .footer-row .footer-container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 9.25rem;
-
-        .footer-left {
-            display: flex;
-
-            h2 {
-                width: 200px;
-                font-size: 1.6rem;
-                font-weight: 600;
-                letter-spacing: .032rem;
-                color: #fff;
-            }
-        }
-
-        .footer-right {
-            font-size: 1.4rem;
-            font-weight: 400;
-            letter-spacing: .028rem;
-            color: #fff;
-            opacity: .5;
-        }
-    }
-}
-
-@media (max-width: 960px) {
-    :root {
-        --container-padding: 3.9rem;
-    }
-
-    .footer .footer-top .footer-container {
-        flex-wrap: wrap;
-        height: 500px;
-
-        .footer-last {
-            flex-basis: 100%;
-
-            .send-email {
-                width: 100%;
-                margin-bottom: 4.7rem;
-
-                input {
-                    width: 100%;
-                }
-            }
-
-            .footer-phone {
-                align-self: start;
-                margin-left: 3.9rem;
-            }
-        }
-    }
-
-    .footer-row .footer-container {
-        .footer-right {
-            width: 234px;
-            text-align: end;
-        }
-    }
-}
-
-@media (max-width: 480px) {
-    :root {
-        --container-padding: 3rem;
-    }
-
-    .footer .footer-top .footer-container {
-        min-height: 630px;
-
-        .footer-logo {
-            flex-basis: 100%;
-        }
-    }
-
-    .footer .footer-row .footer-container {
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: start;
-        row-gap: 4rem;
-        height: 200px;
-
-        .footer-left {
-            flex-direction: column;
-            row-gap: 1rem;
-        }
-
-        .footer-right {
-            text-align: left;
-            width: 100%;
-        }
-    }
-}
